# MHE2022-2023

./: README.md
zad1/: CMakeLists.txt  config.json  main.cpp
zad1/data/: config.json
zad1/src/: main.cpp
zad2/: CMakeLists.txt  main.cpp
zad3/: CMakeLists.txt  brudnopis.h  main.cpp
zad4/: brudnopis.h  dodaktowe_testy.h  main.cpp
zad5/: CMakeLists.txt  main.cpp
zad6/: base_for_puzzles.cpp  base_for_puzzles.h  base_functions.cpp  base_functions.h  main.cpp
zad6/algorithms/: annealing.cpp  brute.cpp  brute.h  hills.cpp  hills.h  random.cpp  random.h  tabu.cpp
zad7/: CMakeLists.txt  main.cpp
zad7/algorithms/: annealing.cpp  annealing.h  brute.cpp  random.h  tabu.cpp
zad8/: CMakeLists.txt  base_for_puzzles.cpp  base_for_puzzles.h  base_functions.cpp  base_functions.h  main.cpp  placeholder.h
zad8/algorithms/: annealing.cpp  brute.cpp  brute.h  hills.cpp  hills.h  random.cpp  tabu.cpp  tabu.h
